see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Dec-2011 Jean-Marie Simonet
 $ Updating installation ini files pt-BR, ckb-IQ, lo-LA
 # [#27469] Fixing Update Notification to call specific icons. Thanks Andrea
 # [#27464] com_config - db query standardized. Thanks Sudhi.
 # [#27468] script.php needs to delete one more folder. Thanks Andrea and Christophe


21-Dec-2011 Christophe Demko
 + Missing an hathor view in [#27414]
 # [#27273] Sorting broken in com_contact single category view (Denise McLaurin)

-------------------- 2.5.0 Beta1 Release [22-Dec-2011] ------------------

21-Dec-2011 Mark Dexter
 + [#27348] Finder Integration: Rob Schley, Michael Babker, Elin Waring, Chris Davenport, Omar Ramos, Viet Hoang Vu, 
 	Jean Marie Simonet, Rouven Weßling, Louis Landry, Gabriele Pongelli
 # [#27455] Group by clause in articles missing 2 new columns
 # [#27454] SQLQuery with function!

21-Dec-2011 Christophe Demko
 ^ [#27409] Remove unnecessary import calls and fix up docblocks (Rouven Weßling)
 $ [#27417] Options have replaced preferences (Jean-Marie Simonet)
 
21-Dec-2011 Jean-Marie Simonet
 $ Updating installation ini file el-GR, sr-RS, sr-YU

21-Dec-2011 Mark Dexter
 # [#27349] Replace deprecated method getEscaped
 # [#27414] Implement a administrator/templates/hathor/html/com_users/notes/default.php layout in hathor plus other bug fixes
 # [#27444] Sample Data for SQLServer and SQLAzure sync
 # [#27449] Synch up with platform changes as of CMS beta 2.5
 # [#27442] Add the #__user_notes table in sqlsrv and sqlazure
 # [#27257] Unexpected behavior of children in Categories and Menu Items